XWIKI-21976: The PDF export calls the REST API to get the headless Chrome IP address even when cookie filtering is not required
(cherry picked from commit 9e43a9ea28b2336240f22ba6a831404013938a0d)